Fixes
* Fast repeated clicks on “Compare” lead to an unwanted width for the
sidebar
* The text appearing at the top of the window when clicking “Compare”
is now centered
* On Windows, the horizontal scroll bar doesn’t appear anymore inside
the sidebar

--- a/css/default.css
+++ b/css/default.css
@@ -100,7 +100,7 @@ aside {
     top: 60px;
     right: 0;
     z-index: 200;
-    overflow: scroll;
+    overflow-y: scroll;
     width: 350px;
     height: calc(100% - 60px);
     background-color: rgba(238, 241, 244, .9);
